--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
         td:nth-child(1) {
             width: 300px;
         }
+
+        img {
+            width: 300px;
+        }
     </style>
 </head>
 
@@ -77,11 +81,59 @@
                 </tr>
             </tbody>
         </table>
-        
+
+
+        <ul class="tabs" data-active-collapse="true" data-tabs id="collapsing-tabs">
+            <li class="tabs-title"><a href="#panel1c">关于</a></li>
+            <li class="tabs-title"><a href="#panel2c">捐赠</a></li>
+        </ul>
+        <div class="tabs-content" data-tabs-content="collapsing-tabs">
+            <div class="tabs-panel" id="panel1c">
+                <p>斗鱼赔率计算器。输入双方当前竞猜的赔率，即可算出当前<strong>开盘</strong>的最佳金额</p>
+            </div>
+            <div class="tabs-panel" id="panel2c">
+                <p>欢迎通过以下方式给我捐赠</p>
+                <div class="grid-x">
+                    <div class="cell medium-3">
+                        <ul class="vertical tabs" data-tabs id="donate-tabs">
+                            <li class="tabs-title is-active"><a href="#panel1v" aria-selected="true">支付宝</a></li>
+                            <li class="tabs-title"><a href="#panel2v">微信</a></li>
+                            <li class="tabs-title"><a href="#panel3v">PayPal</a></li>
+                            <li class="tabs-title"><a href="#panel4v">Bitcoin</a></li>
+                        </ul>
+                    </div>
+                    <div class="cell medium-9">
+                        <div class="tabs-content" data-tabs-content="donate-tabs">
+                            <div class="tabs-panel is-active" id="panel1v">
+                                <p>使用支付宝扫描下方二维码</p>
+                                <img src="img/alipay.png">
+                            </div>
+                            <div class="tabs-panel" id="panel2v">
+                                <p>使用微信扫描下方二维码</p>
+                                <img src="img/wechat.png">
+                            </div>
+                            <div class="tabs-panel" id="panel3v">
+                                <p>Click <a href="https://www.paypal.me/KaitoHH">Here</a> or scan QR code below to donate.</p>
+                                <img src="img/paypal.png">
+                            </div>
+                            <div class="tabs-panel" id="panel4v">
+                                <p>My bitcoin address: <a href="bitcoin:1KMxi4LmznyrZKZFuydNio7T1L97ewW2HL">1KMxi4LmznyrZKZFuydNio7T1L97ewW2HL</a></p>
+                                <img src="img/btc.png">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 
+
+    <script type="text/javascript" src="js/jquery.js"></script>
+    <script type="text/javascript" src="js/foundation.min.js"></script>
     <script type="text/javascript" src="js/knockout-3.4.2.js"></script>
     <script type="text/javascript" src="js/app.js"></script>
+    <script type="text/javascript" src="js/model.js"></script>
+
 </body>
 
 </html>
