--- a/index.html
+++ b/index.html
@@ -90,6 +90,7 @@
         <div class="tabs-content" data-tabs-content="collapsing-tabs">
             <div class="tabs-panel" id="panel1c">
                 <p>斗鱼赔率计算器。输入双方当前竞猜的赔率，即可算出当前<strong>开盘</strong>的最佳金额</p>
+                <a class="github-button" href="https://github.com/KaitoHH" data-size="large" data-show-count="true" aria-label="Follow @KaitoHH on GitHub">Follow @KaitoHH</a>
             </div>
             <div class="tabs-panel" id="panel2c">
                 <p>欢迎通过以下方式给我捐赠</p>
@@ -113,7 +114,7 @@
                                 <img src="img/wechat.png">
                             </div>
                             <div class="tabs-panel" id="panel3v">
-                                <p>Click <a href="https://www.paypal.me/KaitoHH">Here</a> or scan QR code below to donate.</p>
+                                <p>Click <a target="_blank" href="https://www.paypal.me/KaitoHH">Here</a> or scan QR code below to donate.</p>
                                 <img src="img/paypal.png">
                             </div>
                             <div class="tabs-panel" id="panel4v">
@@ -133,6 +134,7 @@
     <script type="text/javascript" src="js/knockout-3.4.2.js"></script>
     <script type="text/javascript" src="js/app.js"></script>
     <script type="text/javascript" src="js/model.js"></script>
+    <script async defer src="https://buttons.github.io/buttons.js"></script>
 
 </body>
 
