add share button

--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
     <script type="text/javascript" src="js/app.js"></script>
     <script type="text/javascript" src="js/model.js"></script>
     <script async defer src="https://buttons.github.io/buttons.js"></script>
-
+    <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-5a50d88f34f69114"></script>
 </body>
 
 </html>
