--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>斗鱼赔率计算器</title>
-    <link rel="stylesheet" href="css/foundation.min.css">
+    <link href="https://cdn.bootcss.com/foundation/6.4.4-rc1/css/foundation.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/foundation-icons.css">
     <link rel="stylesheet" href="css/app.css">
     <style>
@@ -155,10 +155,10 @@
     </div>
 
 
-    <script type="text/javascript" src="js/jquery.js"></script>
-    <script type="text/javascript" src="js/foundation.min.js"></script>
-    <script type="text/javascript" src="js/knockout-3.4.2.js"></script>
-    <script type="text/javascript" src="js/app.js"></script>
+    <script src="https://cdn.bootcss.com/jquery/3.2.1/jquery.slim.min.js"></script>
+    <script src="https://cdn.bootcss.com/foundation/6.4.4-rc1/js/foundation.min.js"></script>
+    <script src="https://cdn.bootcss.com/foundation/6.0.5/js/app.js"></script>
+    <script src="https://cdn.bootcss.com/knockout/3.4.2/knockout-min.js"></script>
     <script type="text/javascript" src="js/model.js"></script>
     <script async defer src="https://buttons.github.io/buttons.js"></script>
     <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-5a50d88f34f69114"></script>
