adjust table width

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="css/app.css">
     <style>
         td:nth-child(1) {
-            width: 300px;
+            width: 40%;
         }
 
         img {
@@ -64,7 +64,7 @@
                 <input type="text" data-bind="textInput:bal">
             </div>
         </div>
-        <table>
+        <table style="table-layout:fixed;">
             <tbody>
                 <tr>
                     <td>实际赔率</td>
