image cdn speedup

--- a/index.html
+++ b/index.html
@@ -149,19 +149,19 @@
                         <div class="tabs-content" data-tabs-content="donate-tabs">
                             <div class="tabs-panel is-active" id="panel1v">
                                 <p>使用支付宝扫描下方二维码</p>
-                                <img src="img/alipay.png">
+                                <img src="http://douyu-1251621478.file.myqcloud.com/alipay.png">
                             </div>
                             <div class="tabs-panel" id="panel2v">
                                 <p>使用微信扫描下方二维码</p>
-                                <img src="img/wechat.png">
+                                <img src="http://douyu-1251621478.file.myqcloud.com/wechat.png">
                             </div>
                             <div class="tabs-panel" id="panel3v">
                                 <p>Click <a target="_blank" href="https://www.paypal.me/KaitoHH">Here</a> or scan QR code below to donate.</p>
-                                <img src="img/paypal.png">
+                                <img src="http://douyu-1251621478.file.myqcloud.com/paypal.png">
                             </div>
                             <div class="tabs-panel" id="panel4v">
                                 <p>My bitcoin address: <a href="bitcoin:1KMxi4LmznyrZKZFuydNio7T1L97ewW2HL">1KMxi4LmznyrZKZFuydNio7T1L97ewW2HL</a></p>
-                                <img src="img/btc.png">
+                                <img src="http://douyu-1251621478.file.myqcloud.com/btc.png">
                             </div>
                         </div>
                     </div>
