change foundation-icons to local href

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>斗鱼赔率计算器</title>
     <link href="https://cdn.bootcss.com/foundation/6.4.4-rc1/css/foundation.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/foundicons/3.0.0/foundation-icons.min.css" />
+    <link rel="stylesheet" href="css/foundation-icons.min.css" />
     <style>
         td:nth-child(1) {
             width: 40%;
