--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>斗鱼赔率计算器</title>
-    <link href="https://cdn.bootcss.com/foundation/6.4.4-rc1/css/foundation.min.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/foundation-sites@6.6.1/dist/css/foundation.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/foundation-icons.min.css" />
     <style>
         td:nth-child(1) {
@@ -41,6 +41,7 @@
 </head>
 
 <body>
+    <a href="https://github.com/KaitoHH/douyu_lottery" class="github-corner" aria-label="View source on GitHub"><svg width="80" height="80" viewBox="0 0 250 250" style="fill:#70B7FD; color:#fff; position: absolute; top: 0; border: 0; right: 0;" aria-hidden="true"><path d="M0,0 L115,115 L130,115 L142,142 L250,250 L250,0 Z"></path><path d="M128.3,109.0 C113.8,99.7 119.0,89.6 119.0,89.6 C122.0,82.7 120.5,78.6 120.5,78.6 C119.2,72.0 123.4,76.3 123.4,76.3 C127.3,80.9 125.5,87.3 125.5,87.3 C122.9,97.6 130.6,101.9 134.4,103.2" fill="currentColor" style="transform-origin: 130px 106px;" class="octo-arm"></path><path d="M115.0,115.0 C114.9,115.1 118.7,116.5 119.8,115.4 L133.7,101.6 C136.9,99.2 139.9,98.4 142.2,98.6 C133.8,88.0 127.5,74.4 143.8,58.0 C148.5,53.4 154.0,51.2 159.7,51.0 C160.3,49.4 163.2,43.6 171.4,40.1 C171.4,40.1 176.1,42.5 178.8,56.2 C183.1,58.6 187.2,61.8 190.9,65.4 C194.5,69.0 197.7,73.2 200.1,77.6 C213.8,80.2 216.3,84.9 216.3,84.9 C212.7,93.1 206.9,96.0 205.4,96.6 C205.1,102.4 203.0,107.8 198.3,112.5 C181.9,128.9 168.3,122.5 157.7,114.1 C157.9,116.9 156.7,120.9 152.7,124.9 L141.0,136.5 C139.8,137.7 141.6,141.9 141.8,141.8 Z" fill="currentColor" class="octo-body"></path></svg></a><style>.github-corner:hover .octo-arm{animation:octocat-wave 560ms ease-in-out}@keyframes octocat-wave{0%,100%{transform:rotate(0)}20%,60%{transform:rotate(-25deg)}40%,80%{transform:rotate(10deg)}}@media (max-width:500px){.github-corner:hover .octo-arm{animation:none}.github-corner .octo-arm{animation:octocat-wave 560ms ease-in-out}}</style>
     <div class="grid-container">
         <div class="grid-x">
             <div class="cell medium-6">
@@ -126,13 +127,15 @@
 
 
         <ul class="tabs" data-active-collapse="true" data-tabs id="collapsing-tabs">
-            <li class="tabs-title"><a href="#panel1c">关于</a></li>
+            <li class="tabs-title is-active"><a href="#panel1c">关于</a></li>
             <li class="tabs-title"><a href="#panel2c">捐赠</a></li>
         </ul>
         <div class="tabs-content" data-tabs-content="collapsing-tabs">
-            <div class="tabs-panel" id="panel1c">
-                <p>斗鱼赔率计算器。输入双方当前竞猜的赔率，即可算出当前<strong>开盘</strong>的最佳金额</p>
+            <div class="tabs-panel is-active" id="panel1c">
+                <p>斗鱼赔率计算器。输入双方当前竞猜的赔率，即可算出当前<strong>开盘</strong>的最佳金额。觉得不错就给个 Star 吧！或者有任何疑问可以点击下方的 Issue 给我留言。</p>
                 <a class="github-button" href="https://github.com/KaitoHH" data-size="large" data-show-count="true" aria-label="Follow @KaitoHH on GitHub">Follow @KaitoHH</a>
+                <a class="github-button" href="https://github.com/KaitoHH/douyu_lottery" data-size="large" data-show-count="true" aria-label="Star KaitoHH/douyu_lottery on GitHub">Star</a>
+                <a class="github-button" href="https://github.com/KaitoHH/douyu_lottery/issues" data-size="large" data-show-count="true" aria-label="Issue KaitoHH/douyu_lottery on GitHub">Issue</a>
             </div>
             <div class="tabs-panel" id="panel2c">
                 <p>欢迎通过以下方式给我捐赠</p>
@@ -142,7 +145,6 @@
                             <li class="tabs-title is-active"><a href="#panel1v" aria-selected="true">支付宝</a></li>
                             <li class="tabs-title"><a href="#panel2v">微信</a></li>
                             <li class="tabs-title"><a href="#panel3v">PayPal</a></li>
-                            <li class="tabs-title"><a href="#panel4v">Bitcoin</a></li>
                         </ul>
                     </div>
                     <div class="cell medium-9">
@@ -159,10 +161,6 @@
                                 <p>Click <a target="_blank" href="https://www.paypal.me/KaitoHH">Here</a> or scan QR code below to donate.</p>
                                 <img src="https://douyu-1251621478.file.myqcloud.com/paypal.png">
                             </div>
-                            <div class="tabs-panel" id="panel4v">
-                                <p>My bitcoin address: <a href="bitcoin:1KMxi4LmznyrZKZFuydNio7T1L97ewW2HL">1KMxi4LmznyrZKZFuydNio7T1L97ewW2HL</a></p>
-                                <img src="https://douyu-1251621478.file.myqcloud.com/btc.png">
-                            </div>
                         </div>
                     </div>
                 </div>
@@ -170,13 +168,15 @@
         </div>
     </div>
 
-    <script src="https://cdn.bootcss.com/knockout/3.4.2/knockout-min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/knockout@3.5.1/build/output/knockout-latest.min.js"></script>
     <script type="text/javascript" src="js/model.js"></script>
-    <script src="https://cdn.bootcss.com/jquery/3.2.1/jquery.slim.min.js"></script>
-    <script src="https://cdn.bootcss.com/foundation/6.4.4-rc1/js/foundation.min.js"></script>
-    <script src="https://cdn.bootcss.com/foundation/6.0.5/js/app.js"></script>
-    <script async defer src="https://buttons.github.io/buttons.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.4.1/dist/jquery.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/foundation-sites@6.6.1/dist/js/foundation.min.js"></script>
+    <script async defer src="https://cdn.jsdelivr.net/gh/ntkme/github-buttons@v2.7.0/dist/buttons.min.js"></script>
     <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-5a50d88f34f69114"></script>
+    <script>
+        $(document).foundation();
+    </script>
 </body>
 
 </html>
